tests/NormalTests/paczka1/small_fuzzy/74389962.err
Error in line 4: vqM S164 0,5
Error in line 1: lDsIU A113 66,8
Error in line 6: lDsIU S164 26,1
